# SpvShaderCompiler

./: CMakeLists.txt  README.md
SpvShaderCompiler/: CMakeLists.txt  SpvShaderCompiler.cpp  SpvShaderCompiler.h
SpvShaderCompilerTests/: CMakeLists.txt  SpvShaderCompilerTests.cpp
SpvShaderCompilerTests/shaders/: blur.comp  blur_comp.spv  blur_errors.comp
